2008-08-27  Chris Marrin  <cmarrin@apple.com>

Reviewed by Dave Hyatt

        Memory leaks when animating transforms
        https://bugs.webkit.org/show_bug.cgi?id=20532

        * rendering/style/RenderStyle.cpp:
        (WebCore::ScaleTransformOperation::blend):
        (WebCore::RotateTransformOperation::blend):
        (WebCore::SkewTransformOperation::blend):
        (WebCore::TranslateTransformOperation::blend):
        (WebCore::MatrixTransformOperation::blend):
        * rendering/style/RenderStyle.h:


Canonical link: https://commits.webkit.org/28355@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@35952 268f45cc-cd09-0410-ab3c-d52691b4dbfc